--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "fast-glob": "^3.3.2",
-    "get-tsconfig": "^4.13.1"
+    "get-tsconfig": "^4.13.1",
+    "ora": "^8.1.0"
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.28.0",
